--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,163 @@
-streamlit==1.32.2
-langchain-core==0.2.36
+aiofiles==24.1.0
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.11
+aiosignal==1.3.2
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.8.0
+asttokens==3.0.0
+attrs==25.1.0
+backoff==2.2.1
+beautifulsoup4==4.13.3
+blinker==1.9.0
+cachetools==5.5.1
+certifi==2025.1.31
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+comm==0.2.2
+cryptography==44.0.0
+dataclasses-json==0.6.7
+debugpy==1.8.12
+decorator==5.1.1
+defusedxml==0.7.1
+dnspython==2.7.0
+email-validator==2.2.0
+emoji==2.14.1
+eval-type-backport==0.2.2
+exceptiongroup==1.2.2
+executing==2.1.0
+fastapi==0.115.12
+fastapi-cli==0.0.7
+filetype==1.2.0
+frozenlist==1.5.0
+gitdb==4.0.12
+GitPython==3.1.44
+greenlet==3.1.1
+h11==0.14.0
+html5lib==1.1
+httpcore==1.0.7
+httptools==0.6.4
+httpx==0.28.1
+idna==3.10
+importlib-metadata==8.6.1
+ipykernel==6.29.5
+ipython==8.32.0
+jedi==0.19.2
+Jinja2==3.1.5
+joblib==1.4.2
+jsonpatch==1.33
+jsonpath-python==1.0.6
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+jupyter-client==8.6.3
+jupyter-core==5.7.2
+langchain==0.2.15
 langchain-community==0.2.1
+langchain-core==0.2.36
 langchain-ollama==0.1.2
+langchain-text-splitters==0.2.2
+langdetect==1.0.9
+langsmith==0.1.147
+lxml==5.3.0
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+matplotlib-inline==0.1.7
+mdurl==0.1.2
+multidict==6.1.0
+mypy-extensions==1.0.0
+narwhals==1.25.1
+nest-asyncio==1.6.0
+nltk==3.9.1
+numpy==1.26.4
+olefile==0.47
+ollama==0.4.7
+orjson==3.10.15
+outcome==1.3.0.post0
+packaging==23.2
+pandas==2.2.3
+parso==0.8.4
+pdfminer.six==20221105
 pdfplumber==0.10.3
+pickleshare==0.7.5
+pillow==10.4.0
+pip==24.2
+platformdirs==4.3.6
+prompt-toolkit==3.0.50
+propcache==0.2.1
+protobuf==4.25.6
+psutil==6.1.1
+psycopg2-binary==2.9.10
+pure-eval==0.2.3
+pyarrow==19.0.0
+pycparser==2.22
+pydantic==2.10.6
+pydantic-core==2.27.2
+pydeck==0.9.1
+Pygments==2.19.1
+pypdf==5.2.0
+pypdfium2==4.30.1
+PySocks==1.7.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-iso639==2025.1.28
+python-magic==0.4.27
+python-multipart==0.0.20
+python-oxmsg==0.0.2
+pytube==15.0.0
+pytz==2025.1
+pywin32==307
+PyYAML==6.0.2
+pyzmq==26.2.1
+rank-bm25==0.2.2
+RapidFuzz==3.12.1
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rich==13.9.4
+rich-toolkit==0.13.2
+rpds-py==0.22.3
+selenium==4.28.1
+setuptools==75.8.0
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.6
+SQLAlchemy==2.0.37
+stack-data==0.6.3
+starlette==0.46.1
+streamlit==1.32.2
+tenacity==8.5.0
+toml==0.10.2
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+trio==0.28.0
+trio-websocket==0.11.1
+typer==0.15.2
+typing-extensions==4.12.2
+typing-inspect==0.9.0
+tzdata==2025.1
+unstructured==0.16.20
+unstructured-client==0.29.0
+urllib3==2.3.0
+uvicorn==0.34.0
+watchdog==6.0.0
+watchfiles==1.0.4
+wcwidth==0.2.13
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
+wheel==0.44.0
+wrapt==1.17.2
+wsproto==1.2.0
+yarl==1.18.3
+youtube-transcript-api==1.0.0
+zipp==3.21.0
